@@ -33,16 +33,14 @@ public class MaxRowsFactory implements SqlStatementCustomizerFactory {
         final int maxRows = ((MaxRows) annotation).value();
 
         if (maxRows == DEFAULT_MAX_ROWS) {
-            throw new IllegalArgumentException(String.format(
-                "no value given for @%s on %s:%s",
+            throw new IllegalArgumentException("no value given for @%s on %s:%s".formatted(
                 MaxRows.class.getSimpleName(),
                 sqlObjectType.getName(),
                 method.getName())
            );
         }
         if (maxRows <= 0) {
-            throw new IllegalArgumentException(String.format(
-                "@%s value given on %s:%s is %s, which is negative or 0. This makes no sense.",
+            throw new IllegalArgumentException("@%s value given on %s:%s is %s, which is negative or 0. This makes no sense.".formatted(
                 MaxRows.class.getSimpleName(),
                 sqlObjectType.getName(),
                 method.getName(),
@@ -65,8 +63,7 @@ public class MaxRowsFactory implements SqlStatementCustomizerFactory {
                                                               Type type) {
         int value = ((MaxRows) annotation).value();
         if (value != DEFAULT_MAX_ROWS) {
-            throw new IllegalArgumentException(String.format(
-                "You've specified a value for @%s on %s:%s(%s) — this value won't do anything, the parameter value will be used instead. Remove the value to prevent confusion.",
+            throw new IllegalArgumentException("You've specified a value for @%s on %s:%s(%s) — this value won't do anything, the parameter value will be used instead. Remove the value to prevent confusion.".formatted(
                 MaxRows.class.getSimpleName(),
                 sqlObjectType.getName(),
                 method.getName(),
@@ -77,8 +74,7 @@ public class MaxRowsFactory implements SqlStatementCustomizerFactory {
         return (stmt, arg) -> {
             int maxRows = (int) arg;
             if (maxRows <= 0) {
-                throw new IllegalArgumentException(String.format(
-                    "@%s value given on %s:%s(%s) is %s, which is negative or 0. This makes no sense.",
+                throw new IllegalArgumentException("@%s value given on %s:%s(%s) is %s, which is negative or 0. This makes no sense.".formatted(
                     MaxRows.class.getSimpleName(),
                     sqlObjectType.getName(),
                     method.getName(),
